build: update build

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<section id="todoapp"></section>
-		<script type="text/javascript" src="app.min.js" ></script>
+		<script type="text/javascript" src="app.js" ></script>
 	</body>
 </html>
